WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
269840
[LibWebRTC][GStreamer] Incoming audio stream clips and glitches
https://bugs.webkit.org/show_bug.cgi?id=269840
Summary
[LibWebRTC][GStreamer] Incoming audio stream clips and glitches
Philippe Normand
Reported
2024-02-21 03:53:11 PST
.
Attachments
Add attachment
proposed patch, testcase, etc.
Philippe Normand
Comment 1
2024-02-21 04:00:17 PST
Pull request:
https://github.com/WebKit/WebKit/pull/24872
EWS
Comment 2
2024-02-22 02:08:23 PST
Committed
275162@main
(429961d17d20): <
https://commits.webkit.org/275162@main
> Reviewed commits have been landed. Closing PR #24872 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2024-02-22 02:09:13 PST
<
rdar://problem/123432878
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug