[LibWebRTC][GStreamer] Incoming audio stream clips and glitches https://bugs.webkit.org/show_bug.cgi?id=269840

Reviewed by Xabier Rodriguez-Calvar.

Add audio meta to incoming audio buffers so that downstream converters don't produce garbage.

* Source/WebCore/platform/mediastream/libwebrtc/gstreamer/RealtimeIncomingAudioSourceLibWebRTC.cpp:
(WebCore::RealtimeIncomingAudioSourceLibWebRTC::OnData):

Canonical link: https://commits.webkit.org/275162@main